# FDF

./: ._libft  ._minilibx  CMakeLists.txt  additional_ft.c  check_file.c  create_fill_matrix.c  create_matrix.c  events.c  fdf.h  main.c  make_image.c  rotate_matr.c  rotate_scale_matr.c
gnl/: author  get_next_line.c  get_next_line.h
gnl/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  (+19 more)
libft/: ._includes
minilibx/: ._Makefile  .__README_  ._font.c  ._font.xcf  ._man  ._mlx.h  ._mlx_init_loop.m  ._mlx_int.h  ._mlx_int_str_to_wordtab.c  ._mlx_new_image.m  ._mlx_new_window.h  ._mlx_new_window.m  ._mlx_rgb.c  ._mlx_shaders.c  ._mlx_xpm.c
minilibx/man/: ._man1  ._man3
minilibx/man/man1/: ._mlx.1  ._mlx_loop.1  ._mlx_new_image.1  ._mlx_new_window.1  ._mlx_pixel_put.1
minilibx/man/man3/: ._mlx.1  ._mlx_loop.1  ._mlx_new_image.1  ._mlx_new_window.1  ._mlx_pixel_put.1
